# himawari-downloader

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: TUTORIAL.md  TUTORIAL.zh-CN.md
src/himawari_downloader/: __init__.py  __main__.py  cli.py  client.py  errors.py  models.py  transport.py
src/himawari_downloader/backends/: __init__.py  base.py  ftp.py  s3.py
src/himawari_downloader/download/: __init__.py  runner.py
src/himawari_downloader/products/: __init__.py  ftp_rules.py  parse.py
src/himawari_downloader/query/: __init__.py  timeline.py
tests/: test_cli.py  test_client.py  test_ftp_backend.py  test_parse.py  test_proxy.py  test_s3_backend.py
